# portfolio

./: README.md  READme.txt
other/: prime_tester.py  randomImg.py
uniprojects/2017/: CAB202 Teensy Game.c
uniprojects/2017/IFB104 Assignment 1/: building_blocks.py
uniprojects/2017/IFB130/: Oktomook.sql  Quiz2_Dominos.sql  W01_Tutorial_Worksheet_Task6.sql
uniprojects/2017/IFB130/Assignment Part A/: Assignment 2a.docx  ~$signment 2a.docx
uniprojects/2017/IFB130/Assignment Part B/: New Text Document.txt  README.txt  TreasureHunterQueries.sql
uniprojects/2017/IFB130/W01/: allocations.csv  lecturers.csv  units.csv
uniprojects/2018/hotspot website/: ItemPage.php  Login.php  Logout.php  Registration.php  ResultsPage.php  SearchPage.php  TopOfPage.inc  footer.inc  hotspot.csv  hotspotDatabase.sql  htmlGenerator.php  ie.css  main.css  main.js  make_func.sql  operationsDB.php  readme  serverValidations.php
uniprojects/2018/hotspot website/oldHTML/: ItemPage.html  Login.html  NearestResultsPage.html  Registration.html  ResultsPage.html  SearchPage.html
uniprojects/2018/minesweeper threaded server/: Authentication.txt  instructions.docx
uniprojects/2018/minesweeper threaded server/localversion/: CMakeLists.txt  Makefile.gitignore  communication.c  server  server.c
uniprojects/2018/minesweeper threaded server/localversion - Copy/: .gitignore  Makefile  client  client.c  communication.h  minetest.c
uniprojects/2018/store app/.metadata/: version.ini
uniprojects/2019/CAB301ass1/: CAB301ass1.sln
uniprojects/2019/CAB301ass2/: CAB301ass2.sln
(+77 files in other folders)
